--- a/index.html
+++ b/index.html
@@ -5,20 +5,40 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-  <div class="wrapper">
- <header>
-  <h1>Header</h1>
-  <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+  <div class="body-wrapper">
+ <header class="header-item">
+  <h1>HEADER</h1>
+  <ul class="navigation-wrapper">
+    <li class="navigation-item">About us</li>
+    <li class="navigation-item">Collections</li>
+    <li class="navigation-item">New Collection</li>
+    <li class="navigation-item">Special offers</li>
+    <li class="navigation-item">Gallery</li>
+    <li class="navigation-item">Reviews</li>
   </ul>
  </header>
+
+ <main class="main-item">
+  <h1>MAIN</h1>
+  <div class="main-wrapper">
+    <div class="main-wrapper-item">1</div>
+    <div class="main-wrapper-item" >2</div>
+    <div class="main-wrapper-item">3</div>
+    <div class="main-wrapper-item">4</div>
+    <div class="main-wrapper-item item5">5</div>
+    <div class="main-wrapper-item">6</div>
+    <div class="main-wrapper-item">7</div>
+    <div class="main-wrapper-item">8</div>
+   
+  </div>
+ </main>
+
+<footer class="footer-item">
+  <h1>FOOTER</h1>
+</footer>
 
   </div>
 </body>
